# ragna

./: .coderabbit.yaml  CHANGELOG.md  Cargo.toml  PUBLISHED-CRATES  README.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
compile_tests/: Cargo.toml
compile_tests/expected/: assignment.stderr  constant.stderr  control_flow.stderr  extern_mod.stderr  fns.stderr  operators.stderr  ranges.stderr  references.stderr  structs.stderr  unsupported_syntax.stderr
compile_tests/src/: assignment.rs  control_flow.rs  extern_mod.rs  fns.rs  lib.rs  operators.rs  ranges.rs  references.rs  structs.rs  unsupported_syntax.rs
crates/ragna/: Cargo.toml
crates/ragna/examples/: window.rs
crates/ragna/src/: app.rs  context.rs  control_flow.rs  functions.rs  glob.rs  instructions.rs  lib.rs  operations.rs  operators.rs  runner.rs  testing.rs  types.rs  values.rs  wgsl.rs
crates/ragna/src/runner/: common.rs  mod.rs  program.rs  window.rs
crates/ragna/src/types/: array.rs  mod.rs  native.rs  primitive.rs  range.rs  vectors.rs
crates/ragna/tests/compilation/: main.rs
crates/ragna/tests/compile_time_errors/: constant.rs  constant.stderr  unsupported_syntax.stderr
crates/ragna/tests/integration/: assignment.rs  compile_time_errors.rs  constants.rs  fn_call.rs  fns.rs  globs.rs  if_.rs  imports.rs  loops.rs  main.rs  multiple_runs.rs  no_glob.rs  not_used_glob.rs  operators.rs  read.rs  references.rs  structs.rs  target.rs  testing.rs  traits.rs  types.rs
crates/ragna/tests/integration/app/: empty.rs  invalid_glob.rs  mod.rs  multiple_runs.rs  read.rs
crates/ragna/tests/integration/primitive_types/: mod.rs  range.rs
crates/ragna/tests/integration/types/: array.rs  mod.rs  primitive.rs  range.rs  structs.rs  traits.rs  vectors.rs
crates/ragna_derive/: Cargo.toml
crates/ragna_derive/src/: gpu.rs  lib.rs
crates/ragna_derive/src/gpu/: attrs.rs  constants.rs  expressions.rs  fns.rs  foreign.rs  generics.rs  globs.rs  impls.rs  mod.rs  statements.rs  structs.rs  traits.rs  types.rs  vars.rs
