[package]
name = "ragna"
description = "Library for easily creating GPU-native applications"
readme = "../../README.md"
keywords = ["gpu", "rendering", "compute", "shader"]
categories = ["game-development", "graphics", "rendering", "concurrency"]
exclude = [".github", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derive-where.workspace = true
futures.workspace = true
fxhash.workspace = true
itertools.workspace = true
once_cell.workspace = true
ragna_derive.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { workspace = true, features = ["rwh_05"] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
android_logger.workspace = true
winit = { workspace = true, features = ["android-native-activity", "rwh_05"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl", "wgsl"] }

[lints]
workspace = true
